--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
@@ -20,8 +20,8 @@
 
 <body>
     <header>
+        <a><img src="assets/Logo (1).svg" alt="Bieb in Bloei" class="logo" href="index.html"></a>
         <ul>
-            <li><a><img src="assets/Logo (1).svg" alt="Bieb in Bloei" class="logo" href="index.html"></a></li>
             <li><a href="Stekjes">Stekjes</a></li>
             <li><a href="Zaden">Zaden</a></li>
             <li><a href="Geveltuin">Geveltuin</a></li>
@@ -29,19 +29,19 @@
             <li><a href="Agenda">Agenda</a></li>
             <li><a href="Contact">Contact</a></li>
         </ul>
-        <h1>Groene Bieb</h1>
-        <p class="ondertitel">Inspireer & Deel je Groene Passie</p>
+        <h1>Groene bieb</h1>
     </header>
 
 
     <section class="bieb-section">
         <div class="content">
             <h1>Onze groene bieb</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
+            <p>De Groene Bibliotheek is een roulerende minibibliotheek met boeken over alles wat met groen,
+                biodiversiteit en gezondheid te maken heeft. De boeken zijn alleen ter inzage en komen uit de Groene
+                Bibliotheek van de Motuinkamer in Tugela85. Deze belangrijke buurtpartner opent elke zaterdagochtend de
+                deuren voor mensen die tussen de boekenverzameling van Eelco Baarda willen neuzen. Hij kiest persoonlijk
+                welke boeken wij tijdelijk bij OBA Linnaeus mogen tentoon stellen, toegepast op het seizoen en bepaalde
+                thema weken.</p>
         </div>
         <div class="image-container">
             <img src="assets/green.jpg" alt="Groene Bieb">
