html naam aangepast

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groene Bieb</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -32,7 +32,7 @@
         <h1>Groene bieb</h1>
     </header>
 
-
+<main>
     <section class="bieb-section">
         <div class="content">
             <h1>Onze groene bieb</h1>
@@ -97,6 +97,7 @@
             <img src="assets/9648v3.gif" alt="Harry">
         </div>
     </section>
+</main>
 
     <footer class="footer">
         <div class="footer-container">
