--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 commodi consequatur?</p>
         </div>
         <div class="shape-container">
-            <img src="assets/9648v3.gif" alt="Harry">
+            <img src="assets/harry blij.gif" alt="Harry">
         </div>
     </section>
 </main>
